Edit README to indicate this is a fork + add Dockerfile